# Neon

./: .gitignore  README.md  meson.build
.github/workflows/: build.yml
Source/: main.cpp  meson.build
Source/Neon/Core/: Entry.cpp  Environment.cpp  Environment.hpp
Source/Neon/Filesystem/: File.cpp  File.hpp  Filesystem.cpp  Filesystem.hpp  VFS.cpp  VFS.hpp
Tests/: meson.build
Tests/Example/: main.cpp
